--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,8 +2,17 @@
 <html>
 <body>
     <h1>Welcome to your Open Liberty Microservice built with Odo</h1>
-    <p>Try your new Microservice <a href="resource">here</a></p>
+    <p>Try your new Microservice <a href="api/resource">here</a></p>
+<div>
+    <h1>Further reading</h1>
     <p>Thanks for generating this project using Odo.  Please see below for some extra information on each of the technologies:</p>
+</div>
+<div>
+    <h2>Odo</h2>
+    <p>
+        The <a href="http://odo.dev/">odo CLI tool</a> is a fast, iterative, and straightforward way for developers who write, build, and deploy applications on Kubernetes and OpenShift.  Existing tools such as kubectl and oc are more operations-focused and require a deep-understanding of Kubernetes and OpenShift concepts. The odo tool abstracts away complex Kubernetes and OpenShift concepts for the developer.
+    </p>
+</div>
 <div>
     <h2>MicroProfile</h2>
     <p>
